# Contando-Feij-es

./: pyproject.toml
feijaozinho/: contando_feijao.py
